<resources>
    <string name="app_name">MyAppPortfolio300</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="MyNanoDegreeApps">My Nanodegree Apps</string>
    <string name="moviePlayerButton">Movie Player</string>
    <string name="scoresAppButton">Scores App</string>
    <string name="libraryAppButton">NLibrary App</string>
    <string name="buildItBiggerButton">Build It Bigger</string>
    <string name="xyzReaderButton">XYZ Reader</string>
    <string name="capstoneButton">Capstone: My own App</string>
    <string name="moviePlayerButtonMessage">This will launch Movie Player Button App</string>
    <string name="libraryAppButtonMessage">This will launch Library App</string>
    <string name="buildItBiggerButtonMessage">This will launch Build It Bigger App</string>
    <string name="xyzReaderButtonMessage">This will launch XYZ Reader App</string>
    <string name="capStoneButtonMessage">This will launch Capstone App</string>
</resources>
